--- a/index.html
+++ b/index.html
@@ -8,20 +8,27 @@
 </head>
 <body>
     <header>
-        <h1> O melhor lugar é aqui!!!</h1>
+        <h1> Aqui é o melhor lugar!</h1>
     </header>
     <nav>
-        <p>Lanches</p>
-        <p>Artesanais</p>
-        <p>Bebidas</p>
+        <a href="#">
+            <p>Lanches</p>
+        </a>
+        <a href="#">
+            <p>Artesanais</p>
+        </a>
+        <a href="#">
+            <p>Bebidas</p>
+        </a>
     </nav>
     <main>
         <section>
             <article>
                 <p>Hamburguer</p>
+                Salada, ovo, hambúrguer e tomate
             </article>
             <article>
-                X-tudo
+                <p>X-Tudo</p>
             </article>
         </section>
     </main>
