Pequenas adições ao cardápio

--- a/index.html
+++ b/index.html
@@ -29,6 +29,35 @@
             </article>
             <article>
                 <p>X-Tudo</p>
+                Salada, ovo, hambúrguer, tomate
+            </article>
+            <article>
+                <p>Americano</p>
+                Salada, ovo, hambúrguer, tomate
+            </article>
+            <article>
+                <p>Especial</p>
+                Salada, ovo, hambúrguer, tomate
+            </article>
+            <article>
+                <p>X-salada</p>
+                Salada, ovo, hambúrguer, tomate
+            </article>
+            <article>
+                <p>X-Bacon</p>
+                Salada, ovo, hambúrguer, tomate
+            </article>
+            <article>
+                <p>X-eggs</p>
+                Salada, ovo, hambúrguer, tomate
+            </article>
+            <article>
+                <p>X-Bacon e Eggs</p>
+                Salada, ovo, hambúrguer, tomate
+            </article>
+            <article>
+                <p>Triplo</p>
+                Salada, ovo, hambúrguer, tomate
             </article>
         </section>
     </main>
