Alterando fonte do titulo e adicionando rodapé

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1> Aqui é o melhor lugar!</h1>
+        <h1> Aqui é o melhor lugar!!!</h1>
     </header>
     <nav>
         <a href="#">
@@ -61,5 +61,8 @@
             </article>
         </section>
     </main>
+    <footer>
+        <p>Site criado por <a href="Paginas/contato.html" target="_blank" type="external">Pedro</a></p>
+    </footer>
 </body>
 </html>
