Adicionando algumas logos

--- a/Paginas/contato.html
+++ b/Paginas/contato.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Entre em contato</title>
+    <link rel="stylesheet" href="../Estilos/stylecontacts.css">
 </head>
 <body>
-    
+    <p>
+        <img src="../imagens/logo-github.jpg" alt="Logo GitHub" class="icones">
+        <a href="https://github.com/Pedro-Henrique771">Pedro-Henrique771</a>
+    </p>
 </body>
 </html>
