--- a/Paginas/index.html
+++ b/Paginas/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hambúrguer</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../Estilos/style.css">
 </head>
 <body>
     <header>
@@ -62,7 +62,7 @@
         </section>
     </main>
     <footer>
-        <p>Site criado por <a href="Paginas/contato.html" target="_blank" type="external">Pedro</a></p>
+        <p>Site criado por <a href="../Paginas/contato.html" target="_blank" type="external">Pedro</a></p>
     </footer>
 </body>
 </html>
