Adicionando os icones

--- a/Paginas/contato.html
+++ b/Paginas/contato.html
@@ -7,9 +7,17 @@
     <link rel="stylesheet" href="../Estilos/stylecontacts.css">
 </head>
 <body>
-    <p>
-        <img src="../imagens/logo-github.jpg" alt="Logo GitHub" class="icones">
-        <a href="https://github.com/Pedro-Henrique771">Pedro-Henrique771</a>
-    </p>
+    <header>
+        <h1>Essas são algumas maneiras de se comunicar comigo.</h1>
+    </header>
+    <main>
+        <section>
+            <ul>
+                <li id="m0"> <a href="https://github.com/Pedro-Henrique771" target="_blank" type="external"><img src="../imagens/logo-github.jpg" alt="Logo GitHub" class="icones">Pedro-Henrique771</a></li>
+                <li><a href="https://www.instagram.com/" target="_blank" type="external"><img src="../imagens/logo-instagram.jpg" alt="Logo Instagram" class="icones">Black77</a></li>
+                <li> <a href="https://www.youtube.com/channel/UCPJqbVhRsAZBxM-phbeu-GQ"><img src="../imagens/logo-youtube.jpg" alt="logo do youtube" class="icones">Black777</a></li>
+            </ul>
+        </section>
+    </main>
 </body>
 </html>
