--- a/Paginas/contato.html
+++ b/Paginas/contato.html
@@ -12,15 +12,16 @@
     </header>
     <main>
         
-            <section>
-                <figure id="img-com-texto">
-                    <img src="../imagens/prfil1.jpg" alt="Foto aleatória" id="perfil">
-                    <figcaption>Meu nome é Pedro, tenho 
-
-                    </figcaption>
-                </figure>
-            </section>
+            <section class="container">
+                <img src="../imagens/perfil1.jpg" alt="Foto aleatória" id="perfil">
+                <p class="autobiografia">Meu nome é Pedro tenho 19 anos, nascido em Teofilo Otoni - MG, com 3 meses dfui para Portugal, fui criado por lá até meus 7 anos de idade, quando minha familia resolveu voltar ao Brasil, desde lá permaneço aqui.<br>
+                Depois de me terminar o ensino médio, minha familia queria que eu fizesse uma faculdade, mas eu ainda não sabia exatamente o que eu queria, foi ai que eu conheci a área da programação, de começo pensei que era um quebra cabeça, que eu precisava entender muito de matemática e de inglês. <br>
+                Mas então comecei meu primeiro curso de programação no curso em vídeo, era um curso de Python, e foi o suficiente pra eu me apaixonar de vez pela programação,
+                desde então já estudei, Python, SQL, Dart e seu framework Flutter, Git/GitHub até que resolvi, focar em me tornar um Front-end, sendo esse meu projeto um dos primeiros passos pra essa carreira.
+                </p>
+                </section>
                 <section>
+                    <h2 id="contacts">Algumas maneiras de entrar em contato comigo</h2>
                     <ul>
                         <li id="m0"> <a href="https://github.com/Pedro-Henrique771" target="_blank" type="external"><img src="../imagens/logo-github.jpg" alt="Logo GitHub" class="icones">Pedro-Henrique771</a></li>
                         <li><a href="https://www.instagram.com/" target="_blank" type="external"><img src="../imagens/logo-instagram.jpg" alt="Logo Instagram" class="icones">Black77</a></li>
