Alteração no menu

--- a/Paginas/index.html
+++ b/Paginas/index.html
@@ -21,6 +21,7 @@
             <p>Bebidas</p>
         </a>
     </nav>
+    <hr style="border-color: #CCC266;">
     <main>
         <section>
             <article>
