--- a/Paginas/contato.html
+++ b/Paginas/contato.html
@@ -14,7 +14,7 @@
         
             <section class="container">
                 <img src="../imagens/perfil1.jpg" alt="Foto aleatória" id="perfil">
-                <p class="autobiografia">Meu nome é Pedro tenho 19 anos, nascido em Teofilo Otoni - MG, com 3 meses dfui para Portugal, fui criado por lá até meus 7 anos de idade, quando minha familia resolveu voltar ao Brasil, desde lá permaneço aqui.<br>
+                <p class="autobiografia">Meu nome é Pedro tenho 19 anos, nascido em Teofilo Otoni - MG, com 3 meses fui para Portugal, fui criado por lá até meus 7 anos de idade, quando minha familia resolveu voltar ao Brasil, desde lá permaneço aqui.<br>
                 Depois de me terminar o ensino médio, minha familia queria que eu fizesse uma faculdade, mas eu ainda não sabia exatamente o que eu queria, foi ai que eu conheci a área da programação, de começo pensei que era um quebra cabeça, que eu precisava entender muito de matemática e de inglês. <br>
                 Mas então comecei meu primeiro curso de programação no curso em vídeo, era um curso de Python, e foi o suficiente pra eu me apaixonar de vez pela programação,
                 desde então já estudei, <strong>Python</strong>, <strong>SQL</strong>, <strong>Dart</strong> e seu framework <strong>Flutter</strong>, <strong>Git/GitHub</strong> até que resolvi focar em me tornar um Front-end, sendo esse meu projeto um dos primeiros passos pra essa carreira com <strong>HTML&CSS</strong>.
